Add self-contained native library loading